--- a/references.bib
+++ b/references.bib
@@ -61,3 +61,27 @@
 	Title = {Statistical methods in psychology journals: Guidelines and explanations.},
 	Volume = {54},
 	Year = {1999}}
+
+@article{loftus1993picture,
+  title={A picture is worth a thousandp values: On the irrelevance of hypothesis testing in the microcomputer age},
+  author={Loftus, Geoffrey R},
+  journal={Behavior Research Methods, Instruments, \& Computers},
+  volume={25},
+  number={2},
+  pages={250--256},
+  year={1993},
+  publisher={Springer}
+}
+
+
+@article{kastellec2007using,
+  title={Using graphs instead of tables in political science},
+  author={Kastellec, Jonathan P and Leoni, Eduardo L},
+  journal={Perspectives on politics},
+  volume={5},
+  number={04},
+  pages={755--771},
+  year={2007},
+  publisher={Cambridge Univ Press}
+}
+
