Code chunk organization for within-subjects part

--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Chat at 2017-05-10 09:34:46 -0600 
+%% Created for Chat at 2017-06-16 18:00:40 +0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Olejnik2003,
+	Author = {Stephen Olejnik and James Algina},
+	Date-Added = {2017-06-16 11:00:05 +0000},
+	Date-Modified = {2017-06-16 11:00:39 +0000},
+	Journal = {Psychological Methods},
+	Title = {Generalized eta and omega squared statistics: measures of effect size for some common research designs},
+	Year = {2003}}
+
+@article{Bakeman2005,
+	Author = {Roger Bakeman},
+	Date-Added = {2017-06-16 10:59:24 +0000},
+	Date-Modified = {2017-06-16 11:00:02 +0000},
+	Journal = {Behavior Research Methods},
+	Title = {Recommended effect size statistics for repeated measures designs},
+	Year = {2005}}
 
 @book{Rosenthal1991a,
 	Author = {Rosenthal, Robert},
@@ -61,32 +77,33 @@
 	Title = {Statistical methods in psychology journals: Guidelines and explanations.},
 	Volume = {54},
 	Year = {1999}}
-	
+
 @article{Cummings2011,
-  author = {Cummings, Peter},
-  doi = {10.1001/archpediatrics.2011.97},
-  journal = {Archives of Pediatrics {\&} Adolescent Medicine},
-  mendeley-groups = {stats/effect sizes},
-  month = {jul},
-  number = {7},
-  pages = {592},
-  pmid = {21727271},
-  title = {{Arguments for and Against Standardized Mean Differences (Effect Sizes)}},
-  url = {http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve{\&}db=PubMed{\&}dopt=Citation{\&}list{\_}uids=21727271 http://archpedi.jamanetwork.com/article.aspx?doi=10.1001/archpediatrics.2011.97},
-  volume = {165},
-  year = {2011}
-}
+	Author = {Cummings, Peter},
+	Doi = {10.1001/archpediatrics.2011.97},
+	Journal = {Archives of Pediatrics {\&} Adolescent Medicine},
+	Mendeley-Groups = {stats/effect sizes},
+	Month = {jul},
+	Number = {7},
+	Pages = {592},
+	Pmid = {21727271},
+	Title = {{Arguments for and Against Standardized Mean Differences (Effect Sizes)}},
+	Url = {http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve{\&}db=PubMed{\&}dopt=Citation{\&}list{\_}uids=21727271 http://archpedi.jamanetwork.com/article.aspx?doi=10.1001/archpediatrics.2011.97},
+	Volume = {165},
+	Year = {2011},
+	Bdsk-Url-1 = {http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve%7B%5C&%7Ddb=PubMed%7B%5C&%7Ddopt=Citation%7B%5C&%7Dlist%7B%5C_%7Duids=21727271%20http://archpedi.jamanetwork.com/article.aspx?doi=10.1001/archpediatrics.2011.97},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1001/archpediatrics.2011.97}}
 
 @incollection{Cohen1977,
-  author = {Cohen, Jacob},
-  booktitle = {Statistical Power Analysis for the Behavioral Sciences},
-  doi = {10.1016/B978-0-12-179060-8.50007-4},
-  edition = {Revised Ed},
-  mendeley-groups = {stats/effect sizes},
-  pages = {19--74},
-  publisher = {Academic Press},
-  title = {{The t Test for Means}},
-  url = {doi.org/10.1016/B978-0-12-179060-8.50007-4},
-  year = {1977}
-}
-
+	Author = {Cohen, Jacob},
+	Booktitle = {Statistical Power Analysis for the Behavioral Sciences},
+	Doi = {10.1016/B978-0-12-179060-8.50007-4},
+	Edition = {Revised Ed},
+	Mendeley-Groups = {stats/effect sizes},
+	Pages = {19--74},
+	Publisher = {Academic Press},
+	Title = {{The t Test for Means}},
+	Url = {doi.org/10.1016/B978-0-12-179060-8.50007-4},
+	Year = {1977},
+	Bdsk-Url-1 = {doi.org/10.1016/B978-0-12-179060-8.50007-4},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/B978-0-12-179060-8.50007-4}}
