drop notebook rendering in preference to html doc (will switch to bookdown eventually anyway

--- a/effectsize_example.Rmd
+++ b/effectsize_example.Rmd
@@ -3,10 +3,8 @@ title: "Effect size"
 output:
   html_document:
     toc: yes
-  html_notebook:
-    toc: yes
     toc_float:
-      collapsed: no
+      collapsed: yes
 bibliography: references.bib
 ---
 
